@@ -69,14 +69,8 @@ assertError(checkRd(parse_Rd(textConnection(r"(
 )"))), verbose = TRUE)
 ## no error in R < 4.4.0
 
-## package overview may lack a \description (WRE-stated exemption)
-cat(r"(\docType{package}\name{pkg}\title{pkg}\section{Overview}{...})",
-    file = tf <- tempfile())
-stopifnot(exprs = {
-    length(print(checkRd(tf))) == 0
-    ## but usual help pages need one:
-    endsWith(print(checkRd(parse_Rd(textConnection(
-        "\\name{test}\\title{test}"
-    )))), "Must have a \\description")
-})
-## *both* gave "checkRd: (5)" output in 2.10.0 <= R < 4.4.0
+## prepared NEWS should check cleanly
+NEWS_Rd <- readRDS(file.path(R.home("doc"), "NEWS.rds"))
+stopifnot(inherits(NEWS_Rd, "Rd"),
+          length(print(checkRd(NEWS_Rd))) == 0L)
+## "Must have a \description" in R < 4.4.0, now moved to checkRdContents()
